Adding new configuration, webpack & eslint with aliases

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100vh;
-  background-color: #ffff;
+  background-color: #fff;
   color: #000;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 
